--- a/workflow-ui-module/webapp/manifest.json
+++ b/workflow-ui-module/webapp/manifest.json
@@ -17,7 +17,7 @@
         },
         "dataSources": {
             "mainService": {
-                "uri": "/sap/opu/odata/",
+                "uri": "",
                 "type": "OData",
                 "settings": {
                     "annotations": [],
